samples/_failures_safe/1761511648_903420_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_134cacff.c: In function ‘main’:
./samples/SAFE/__tmp_134cacff.c:138:5: error: expected declaration or statement at end of input
  138 |     if (fgets(input, sizeof(input), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_134cacff.c:138:5: error: expected declaration or statement at end of input
